# pxc

./: .gitignore  AGENTS.md  Makefile  NOTICE  README.md  package-lock.json  package.json  pyproject.toml
.agents/skills/pxc-build-activity/: SKILL.md
samples/: README.md
samples/chat/: manifest.json  pxc.wit  sandbox.js  ui.js
samples/chess/: Makefile  manifest.json  package.json  pxc.wit  sandbox.js  ui.js
samples/collab-editor/: Makefile  manifest.json  pxc.wit  sandbox.js  ui.js
samples/email-prompt-craft/: manifest.json  sandbox.js
samples/essay/: manifest.json  package-lock.json  package.json  pxc.wit  sandbox.js  ui.js
samples/flappy-bird/: manifest.json  pxc.wit  sandbox.js  ui.js
samples/flashcards/: manifest.json  sandbox.js  ui.js
samples/harmony-scales/: Makefile  manifest.json  package-lock.json  sandbox.js  ui.js
samples/image/: pxc.wit
samples/interactive-video/: ui.js
samples/m1l8-email-prompt-craft/: manifest.json  sandbox.js  ui.js
samples/m2l3-meeting-documentation/: manifest.json  pxc.wit  sandbox.js  ui.js
samples/m2l5-presentation-builder/: manifest.json  pxc.wit  sandbox.js  ui.js
samples/m2l6-visual-story/: manifest.json  sandbox.js  ui.js
samples/m3l2-data-analysis-toolkit/: Public_M3L2_Datasets.xlsx  manifest.json  sandbox.js  ui.js
samples/markdown/: Makefile  ui.js
samples/math/: pxc.wit  sandbox.js  ui.js
samples/mcq/: pxc.wit  ui.js
samples/python/: Makefile  ui.js
samples/quiz/: ui.js
samples/scorm/: Makefile  sandbox.js
samples/slideshow/: Makefile  manifest.json  pxc.wit  sandbox.js  ui.js
samples/video/: Makefile  ui.js
samples/youtube/: manifest.json  sandbox.js  ui.js
samples/zoom/: pxc.wit  sandbox.js  ui.js
src/pxc/demo/: app.py  constants.py  kv.py  pyproject.toml
src/pxc/demo/templates/: activity.html
src/pxc/demo/tests/: test_iframe_auth.py
src/pxc/lib/: README.md  field_store.py  manifest_types.py  pyproject.toml  runtime.py  sandbox.py  signing.py
src/pxc/lib/sandbox/: manifest.schema.json  pxc.wit
src/pxc/lib/static/js/: pxc-iframe.js  pxc.js
src/pxc/lib/tests/: test_signing.py
src/pxc/lib/tests/runtime/: test_actions.py  test_events.py  test_fields.py  test_http.py  test_init.py  test_log_field.py  test_report.py  test_state.py
src/pxc/lib/tests/samples/: test_chess.py  test_email_prompt_craft.py  test_essay.py  test_flappy_bird.py  test_flashcards.py  test_m1l8_email_prompt_craft.py  test_m2l3_meeting_documentation.py  test_m2l5_presentation_builder.py  test_m2l6_visual_story.py  test_m3l2_data_analysis_toolkit.py  test_youtube.py
src/pxc/lib/tools/: validate_manifest.py
src/pxc/libserver/: README.md  activities.py  app.py  build.py  client.py  config.py  field_store.py  file_storage.py  pyproject.toml  runtime.py  upload.py
src/pxc/libserver/tests/: test_app.py  test_upload.py
src/pxc/lti/: app.py  config.py  integration.py  pyproject.toml
src/pxc/lti/core/: launch.py
src/pxc/lti/templates/: activity_render.html
src/pxc/lti/tests/: README.md  test_admin_api.py  test_integration.py
src/pxc/notebook/: README.md  constants.py  field_store.py  models.py  pyproject.toml  runtime.py
src/pxc/notebook/frontend/src/components/: activity-list.tsx  app-sidebar.tsx  pxc-activity.tsx
src/pxc/notebook/frontend/src/components/views/: course-dashboard-page.tsx  course-detail-page.tsx  home-page.tsx  page-detail-page.tsx
src/pxc/notebook/frontend/src/lib/: api.ts  register-activity.ts
src/pxc/notebook/migrations/versions/: 0005_drop_log_seq.py  0006_page_activity_trusted.py
src/pxc/notebook/samples/courseactivities/reports/: pxc.wit
src/pxc/notebook/tests/: test_activity_trusted.py  test_course_ownership.py  test_get_page.py  test_storage_url.py
src/pxc/notebook/views/: activities.py  activity_runtime.py  course_activities.py  courses.py  lti.py
src/pxc/xblock/: Makefile  README.md  __init__.py  activities.py  apps.py  field_store.py  file_storage.py  internal_api.py  internal_urls.py  libserver_client.py  models.py  permission.py  permissions.py  pxc_xblock.py  pyproject.toml  runtime.py  settings.py  setup.py
src/pxc/xblock/locale/: .gitignore
src/pxc/xblock/management/commands/: backfill_activity_pass_fail.py  fix_m1l8_grading_arithmetic.py
src/pxc/xblock/migrations/: 0001_initial.py
src/pxc/xblock/static/html/: pxc_activity.html  studio_view.html
src/pxc/xblock/static/js/: pxc.js  student.js  studio.js  xblock_pxc.js
src/pxc/xblock/tests/: test_backfill_activity_pass_fail.py  test_field_store.py  test_fix_m1l8_grading_arithmetic.py  test_pxc_xblock.py
