[project]
name = "pxc-demo"
version = "0.1.0"
description = "PXC demo app: minimal FastAPI server for running PXC activities locally."
requires-python = ">=3.11"
dependencies = [
    "pxc-lib",
    "fastapi[standard]",
    "jinja2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pxc.demo"]
include-package-data = true

[tool.setuptools.package-dir]
"pxc.demo" = "."

[tool.setuptools.package-data]
"pxc.demo" = ["templates/**/*"]
