[project]
name = "pxc-lib"
version = "0.1.0"
description = "PXC core runtime: manifest loader, WASM sandbox executor, checkers, stores."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = [
    "jsonschema",
    "pydantic>=2",
    "wasmtime",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pxc.lib", "pxc.lib.tools"]
include-package-data = true

[tool.setuptools.package-dir]
"pxc.lib" = "."
"pxc.lib.tools" = "tools"

[tool.setuptools.package-data]
"pxc.lib" = [
    "sandbox/pxc.wit",
    "sandbox/manifest.schema.json",
    "static/js/*.js",
]

[tool.setuptools.exclude-package-data]
"pxc.lib" = ["tests/*", "tests/**/*"]
